infra/k8s/comments-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: comments-np
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 8001
      targetPort: 8001
...
