infra/k8s/ebus-depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ebus
  template:
    metadata:
      labels:
        app: ebus
    spec:
      containers:
        - name: ebus
          image: basilnsage/test-app.event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: ebus-svc
spec:
  selector:
    app: ebus
  ports:
    - name: ebus
      protocol: TCP
      port: 8100
      targetPort: 8100
...
